--- a/general.css
+++ b/general.css
@@ -1,3 +1,11 @@
 body {
     margin: 0px;
+    font-family: sans-serif;
+    background-color: beige;
+}
+
+.content {
+    margin: 50px 200px;
+    padding: 50px 50px;
+    background-color: white;
 }
