--- a/css/header.css
+++ b/css/header.css
@@ -1,42 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
 /* Style the header with a grey background and some padding */
 .header {
+    /* lucida fav */
+    font-family: Lato;
+
     text-align: center;
     position: sticky;
     top: 0;
     display: block;
+    width: auto;
 
     background-color: #C8B7A6;
-    /* background-image: url('image\ \(3\).jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%; */
+}
+
+.header .title {
+    font-size: larger;
+    padding: 5px 5px;
+    margin: 0;
+}
+
+.header .title h1 {
+    text-decoration: underline;
+    margin: 10px 0 15px;
 }
 
 .header .tabs {
-    width: 100%;
+    width: auto;
     justify-content: center;
-    /* justify-content: space-around; */
-    padding: 20px 10px;
+    padding: 0px 10px 20px;
     display: flex;
+
+    font-size: small;
+}
+
+.header .tabs .separator {
+    margin: auto 0;
+    height: 40px;
+    border: 1px solid black;
 }
   
 /* Style the header links */
 .header .tabs a {
     color: black;
     text-align: center;
-    text-transform: capitalize;
+    text-decoration: none;
+    text-transform: uppercase;
     padding: 12px;
 
     margin: auto 20px;
-    /* margin-top: auto; */
-    /* margin-bottom: auto; */
-    border-width: 1px;
-    border-left: black;
-    border-right: black;
 
-    font-size: 18px;
     line-height: 25px;
-    border-radius: 4px;
+    border-radius: 10px;
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
