--- a/css/general.css
+++ b/css/general.css
@@ -53,7 +53,7 @@ img {
     /* padding-top: 56.25%; 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
-.js_container iframe {
+iframe {
     overflow: hidden;
     position: absolute;
     top: 0;
