Update font size

--- a/css/general.css
+++ b/css/general.css
@@ -6,6 +6,10 @@ body {
     font-size: large;
 }
 
+p {
+    font-size: 25px;
+}
+
 .content {
     margin: 20px 200px 50px 200px;
     padding: 50px 50px;
